--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,11 +12,14 @@ dependencies:
   flutter_riverpod: ^2.4.5
   flutter_svg: ^2.0.8
   riverpod: ^2.4.5
+  json_annotation: ^4.8.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  build_runner: ^2.3.3
+  json_serializable: ^6.7.1
 
 flutter:
   uses-material-design: true
